--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "start-server-and-test": "^1.7.0",
-    "style-loader": "^0.22.1",
+    "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.6"
   },
   "dependencies": {
-    "sass-fluid": "0.0.1"
+    "sass-fluid": "^1.0.0"
   }
 }
